# python-intermediate-inflammation

./: README.md  inflammation-analysis.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
inflammation/: models.py
tests/: test_models.py
